--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Keertana Chidambaram
 # description: the profile of an engineer, researcher and software developer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: images/keertana.jpg
+avatar: images/keertana.jpeg
 
 #
 # Flags below are optional
@@ -22,7 +22,7 @@ footer-links:
   facebook:
   flickr:
   github: keertanavc
-  instagram: 
+  instagram:
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
